# mstu

./: .gitignore  1.cpp  1.txt  2.cpp  diagram.json  Семинар ОАиП 2.cpp
output/: 1  2  ОАиП_1  Семинар ОАиП 2
output/ОАиП_1.dSYM/Contents/: Info.plist
output/Семинар ОАиП 2.dSYM/Contents/: Info.plist
ДЗ2 по информатике 2 вариант/: CMakeLists.txt  csv_loader.cpp  csv_loader.h  database.cpp  database.h  date_converter.cpp  date_converter.h  main.cpp
ДЗ2 по информатике 2 вариант/data/: customers.csv  products.csv  sales.csv
Домашние задачи/: Задача 1.cpp
Домашние задачи/ОАиП/Домашняя работа 1/: Задача 1.cpp  Задача 10.cpp  Задача 11.cpp  Задача 2.cpp  Задача 3.cpp  Задача 4.cpp  Задача 5.cpp  Задача 6.cpp  Задача 7.cpp  Задача 8.cpp  Задача 9.cpp
Домашние задачи/ОАиП/Домашняя работа 10 /: Задача 1 из презентации на очереди.cpp  Задача 2 из презентации на очереди.cpp  Задача 3 из презентации на очереди.cpp
Домашние задачи/ОАиП/Домашняя работа 12/: Задача 1 ооп.cpp  Задача 2 ооп.cpp  Задача 3 ооп.cpp  Задача 4 ооп.cpp  Задача 5 ооп.cpp  Задача 6 ооп.cpp
Домашние задачи/ОАиП/Домашняя работа 3/: Задача 1 из презентации.cpp  Задача 1mat.cpp  Задача 2mat.cpp  (+9 more)
Лабораторные работы Информатика/Лабораторная работа 1/: Задача 1.cpp
Лабораторные работы Информатика/Лабораторная работа 2/: check_process.sh  countdown.sh  server.sh  sum_numbers.sh  text_editor.sh
Лабораторные работы Информатика/Лабораторная работа 3/: lab1.sql
Лабораторные работы Информатика/Лабораторная работа 4/: main.cpp
Лабораторные работы ОАиП/Лабораторная работа 1/: 1.cpp
Лабораторные работы ОАиП/Лабораторная работа 2/: Задачи 1-6.cpp  задача со звездочкой.cpp
Лабораторные работы ОАиП/Лабораторная работа 3/: library.cpp
Лабораторные работы ОАиП/Лабораторная работа 4/: CmakeLists.txt
РК2 Информатика/Задача 1/: 2_insert_data.sql  3_create_indexes.sql  4_create_views.sql  5_transactions.sql  6_queries.sql  7_full_setup.sql
РК2 Информатика/Задача 2/: Zadacha.cpp
Экзаменационная задача по информатикеё/OnlineStore/: CMakeLists.txt  README.md
Экзаменационная задача по информатикеё/OnlineStore/include/: Admin.h  Customer.h  DatabaseConnection.h  Manager.h  Order.h  OrderItem.h  Payment.h  PaymentStrategy.h  Product.h  User.h  Utils.h
Экзаменационная задача по информатикеё/OnlineStore/reports/: report.csv
Экзаменационная задача по информатикеё/OnlineStore/sql/: 01_tables.sql  02_functions.sql  03_procedures.sql  04_triggers.sql  05_sample_data.sql
Экзаменационная задача по информатикеё/OnlineStore/src/: Admin.cpp  Customer.cpp  Manager.cpp  PaymentStrategy.cpp  User.cpp  main.cpp
(+151 files in other folders)
